top spacing fix

--- a/assets/default.css
+++ b/assets/default.css
@@ -11,9 +11,9 @@
 
 .top_bar {
     background-color: var(--systemetric_red);
+    height: var(--header-height);
     text-align: left;
     font-size: 1.5vw;
-    line-height: var(--header-height);
     color: white;
     padding: 20px;
 }
